# ur_cartesian_controller_10xconstruction

./: CMakeLists.txt  README.md  diff_ik_7dof.md  package.xml  qp_best.md  qp_theory_workflow.md
doc/: dependencies.md
include/ur_cartesian_controller/: cartesian_controller.hpp
scripts/: demo_grid.py  plot_cartesian_velocity.py  plot_velocity.py
src/: cartesian_controller.cpp
