<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_cartesian_controller</name>
  <version>0.1.0</version>
  <description>QP-based differential IK for 7-DOF UR manipulator with prismatic lift</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>eigen</depend>
  <depend>osqp</depend>
  <depend>osqp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
